<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.jgrapht</groupId>
	<artifactId>jgrapht</artifactId>
	<packaging>pom</packaging>
	<name>JGraphT - Parent</name>
	<version>1.2.1-SNAPSHOT</version>
	<description>A Java class library for graph-theory data structures and algorithms.</description>
	<url>http://www.jgrapht.org</url>
	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>
	<licenses>
		<license>
			<name>GNU Lesser General Public License Version 2.1, February 1999</name>
			<url>http://jgrapht.sourceforge.net/LGPL.html</url>
			<distribution>repo</distribution>
		</license>
		<license>
			<name>Eclipse Public License (EPL) 1.0</name>
			<url>http://www.eclipse.org/legal/epl-v10.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/jgrapht/jgrapht.git</url>
		<connection>scm:git:git://github.com/jgrapht/jgrapht.git</connection>
		<developerConnection>scm:git:git@github.com:jgrapht/jgrapht.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	<issueManagement>
		<url>https://github.com/jgrapht/jgrapht/issues</url>
	</issueManagement>
	<mailingLists>
		<mailingList>
			<name>jgrapht-users</name>
			<archive>http://lists.sourceforge.net/lists/listinfo/jgrapht-users</archive>
		</mailingList>
		<mailingList>
			<name>jgrapht-announce</name>
			<archive>http://lists.sourceforge.net/lists/listinfo/jgrapht-announce</archive>
		</mailingList>
	</mailingLists>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<main.basedir>${project.basedir}</main.basedir>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>jgrapht-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>jgrapht-io</artifactId>
				<version>${project.version}</version>
            </dependency>
            <dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>jgrapht-ext</artifactId>
				<version>${project.version}</version>
			</dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>jgrapht-guava</artifactId>
                <version>${project.version}</version>
            </dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>jgrapht-demo</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
			    <groupId>org.xmlunit</groupId>
			    <artifactId>xmlunit-core</artifactId>
			    <version>2.5.1</version>
			    <scope>test</scope>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.21.0</version>
					<configuration>
						<testFailureIgnore>false</testFailureIgnore>
								<trimStackTrace>false</trimStackTrace>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-failsafe-plugin</artifactId>
 					<version>2.21.0</version>
 					<dependencies>
  						<dependency>
   							<groupId>org.apache.maven.surefire</groupId>
   							<artifactId>surefire-junit47</artifactId>
   							<version>2.21.0</version>
  						</dependency>
 					</dependencies>
					<executions>
						<execution>
							<id>integration-test</id>
							<goals>
								<goal>integration-test</goal>
								<goal>verify</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-jar-plugin</artifactId>
	                <version>2.4</version>
                </plugin>
                <plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>				
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>1.5</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.1</version>
					<configuration>
						<mavenExecutorId>forked-path</mavenExecutorId>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.0.0</version>
					<configuration>
						<exclude>org.jgrapht.experimental</exclude>
						<show>protected</show>
						<windowtitle>JGraphT : a free Java graph library</windowtitle>
						<additionalJOption>--allow-script-in-comments</additionalJOption>
						<header>&lt;script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML,https://jgrapht.org/mathjax/mathjaxConfig.js"&gt;&lt;/script&gt;</header>
					</configuration>
				</plugin>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.felix
										</groupId>
										<artifactId>
											maven-bundle-plugin
										</artifactId>
										<versionRange>
											[3.0.1,)
										</versionRange>
										<goals>
											<goal>manifest</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<modules>
		<module>jgrapht-core</module>
		<module>jgrapht-io</module>
		<module>jgrapht-ext</module>
		<module>jgrapht-guava</module>
		<module>jgrapht-demo</module>
		<module>jgrapht-dist</module>
	</modules>

	<profiles>
		<profile>
			<id>touchgraph</id>
			<modules>
				<module>jgrapht-touchgraph</module>
			</modules>
		</profile>
		<profile>
			<id>checkstyle</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-checkstyle-plugin</artifactId>
						<version>3.0.0</version>
						<dependencies>
							<dependency>
								<groupId>com.puppycrawl.tools</groupId>
								<artifactId>checkstyle</artifactId>
								<version>8.8</version>
							</dependency>
						</dependencies>
						<executions>
							<execution>
								<id>checkstyle</id>
								<phase>validate</phase>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<configLocation>etc/jgrapht_checks.xml</configLocation>
							<linkXRef>false</linkXRef>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.1</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
